welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: error: type mismatch;
 found   : plm.universe.Direction
 required: Boolean
  if(Direction.EST){
               ^